--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,9 @@
-# env:
-#   browser: true
-#   es2021: true
-# extends: airbnb-base, plugin:jest/recommended
-# parserOptions:
-#   ecmaVersion: latest
-#   sourceType: module
-# rules: {}
+---
 plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
   - jest
 
-# https://eslint.org/docs/user-guide/configuring#specifying-environments
+# # https://eslint.org/docs/user-guide/configuring#specifying-environments
 env:
   node: true
 
@@ -21,4 +15,9 @@ parserOptions:
   ecmaVersion: latest
 
 rules:
+  no-console: 0
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
