--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "type": "module",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
   },
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/silvervelvet/js-starter-project-44/workflows/hexlet-check/badge.svg)](https://github.com/silvervelvet/js-starter-project-44/actions)",
